[package]
authors = ["Jasper de Vries. <jasper.devries@the-future-group.com>"]
name = "gitbucket"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

[lib]
name = "gitbucket"
path = "src/lib.rs"

[dependencies]
ansi_term = "0.12"
base64 = "0.13"
clap = { version = "3", features = ["derive", "env"] }
eyre = "0.6"
git2 = { version = "0.14", features = ["ssh"], default-features = false }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "smallvec", "fmt", "ansi"], default-features = false }
typed-builder = "0.10"
ureq = { version = "2", features = ["json"] }
